# Compilers

./: .gitignore  CMakeLists.txt  README.md
src/: 1  abstract_syntax_tree.c  abstract_syntax_tree.h  caso_teste.dgo  compile.sh  correct_test_cases  data_types.c  data_types.h  error_handling.c  error_handling.h  gocompiler  gocompiler.l  gocompiler.out  gocompiler.y  joao.out  judge.sh  lex.yy.c  linked_list.h  paulo.out  paulo2.out  run.sh  run2.sh  run_semantics.sh  run_yacc.sh  sample.deigo  script.sh  strings.c  strings.h  symbol_entry.c  symbol_entry.h  tables.c  tables.h  token_type.c  token_type.h  y.output  y.tab.c  y.tab.h
test_cases/: bad_comments1.out  bad_comments2.in  bad_comments2.out  badids.in  badids.out  bigga.in  bigga.out  comments_1.out  comments_2.out  comments_bad_1.out  fatorial.out  ids.in  ids.out  ids_keywords_2.dgo  illegal_chars.in  illegal_chars.out  illegalchar_1.out  keywords2.in  lex.yy.c  literals1.in  literals1.out  literals_1.in  literals_1.out  literals_3.out  numbers.in  numbers.out  octal.in  octal.out  semicolons_1.out  semicolons_2.out  single_line.in  single_line.out  stringbad1.out  tabs.out  test.in  test.out
yacc_test_cases/: blocks.dgo  blocks.out  braces.out  circle.out  eof.out  eof1.out  error_unbalanced_par.out  errors.out  expressionHard.out  expressions.out  expressions_2.out  factorial.out  funcParams.out  multiple_funcdecl_blocks.out  precedence.out  smallest.out  stat_error.out  stat_error2.out  statements.out  statements_ast.out  sum.out  syntax_errors_stmt.out  testeErros.out  varfuncdecl.out  (+1 more)
(+38 files in other folders)
